Remplacement de la base locale par la base distante (oubli)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,19 @@ debug=false
 server.port=${port:9000}
 
 # H2 Local
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Ancien URL Postgres
 #spring.datasource.url=jdbc:postgres://nhsazwsfoqucpg:9RPpq7UJ8zmzlrPmRoLl_nqBmF@ec2-54-217-202-109.eu-west-1.compute.amazonaws.com:5432/d815i84rhj9v32
 
 # PostgreSQL Heroku
-#spring.datasource.url=jdbc:postgresql://ec2-54-195-248-72.eu-west-1.compute.amazonaws.com:5432/d3ck7uavpfj8h9?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-#spring.datasource.username=zxnrefrpvwoodi
-#spring.datasource.password=64s1lFRS8jW7NueE_FbDLt-Osx
-#spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://ec2-54-195-248-72.eu-west-1.compute.amazonaws.com:5432/d3ck7uavpfj8h9?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.username=zxnrefrpvwoodi
+spring.datasource.password=64s1lFRS8jW7NueE_FbDLt-Osx
+spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.datasource.max-active=3
