--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>hello.HelloWorld</mainClass>
+                                    <mainClass>demo.DemoApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
