--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>${start-class}</mainClass>
+                                    <mainClass>demo.DemoApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
